hard-gists/915335/run.log
=== Docker Run Log for 915335 ===
Started at: Mi 29. Okt 18:21:18 CET 2025

[2025-10-29 18:21:19] START: Running container for 915335
[2025-10-29 18:21:19] SUCCESS: Container 49f55fab0a5a9918927766858493d467c41af595050b3c9887352ee0d76e3af3 started for 915335
=== Container logs for 915335 ===
  File "/snippet.py", line 10
    print members
    ^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 915335 ===
[2025-10-29 18:21:21] INFO: Container 49f55fab0a5a9918927766858493d467c41af595050b3c9887352ee0d76e3af3 has stopped
